--- a/CultOfTheBloodMoon/Saved/Config/WindowsEditor/Engine.ini
+++ b/CultOfTheBloodMoon/Saved/Config/WindowsEditor/Engine.ini
@@ -86,3 +86,11 @@ FlipNormalMapGreenChannel=False
 [/Script/ConcertTakeRecorder.ConcertSessionRecordSettings]
 LocalSettings=(bRecordOnClient=True,bTransactSources=True)
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
