--- a/CultOfTheBloodMoon/Saved/Config/WindowsEditor/Engine.ini
+++ b/CultOfTheBloodMoon/Saved/Config/WindowsEditor/Engine.ini
@@ -94,3 +94,8 @@ StickyKeysConfirmation=True
 ToggleKeysConfirmation=True
 FilterKeysConfirmation=True
 
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+JavaPath=(Path="")
+
