--- a/CultOfTheBloodMoon/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CultOfTheBloodMoon/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -268,7 +268,7 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,
 SkeletalMesh=SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.File Path,SkeletalMesh.Material Slots.MaterialList,SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.ImportSettings.Material,
 LODInfoUILayout=
 SkeletalMeshComponent=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Barb_Test_C.TransformCommon.Transform,BP_TopDownCharacter_C.Physics.ConstraintsGroup,BP_TopDownCharacter_C.TransformCommon.Transform,BP_TopDownCharacter_C.Materials.MaterialList,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
 BP_Barb_Test_C=BP_Barb_Test_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 SceneComponent=
@@ -362,6 +362,25 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+ContentBrowserTab2.SourcesExpanded=True
+ContentBrowserTab2.FavoritesAreaExpanded=False
+ContentBrowserTab2.PathAreaExpanded=True
+ContentBrowserTab2.CollectionAreaExpanded=False
+ContentBrowserTab2.FavoritesSearchAreaExpanded=False
+ContentBrowserTab2.PathSearchAreaExpanded=False
+ContentBrowserTab2.CollectionSearchAreaExpanded=False
+ContentBrowserTab2.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab2.SelectedPaths=/Game/Materials
+ContentBrowserTab2.PluginFilters=
+ContentBrowserTab2.Favorites.SelectedPaths=
+ContentBrowserTab2.SelectedCollections=
+ContentBrowserTab2.ExpandedCollections=
+ContentBrowserTab2.ThumbnailSize=2
+ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/TopDown/Maps/TopDownMap
@@ -484,7 +503,7 @@ DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 FbxExportOption="\"Object\" "
 FbxImportUI="\"Object\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 AssetViewerSettings="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
@@ -565,8 +584,8 @@ MaterialExpression="\"Object\" "
 MaterialExpressionVectorParameter="\"Object\" "
 MaterialExpressionParameter="\"Object\" "
 MaterialExpressionConstant4Vector="\"Object\" "
-Texture2D="\"Object\" "
-Texture="\"Object\" "
+Texture2D="\"Object\" \"Object.Texture.SourceColorSettings\" "
+Texture="\"Object\" \"Object.Texture.SourceColorSettings\" "
 MaterialExpressionTextureSampleParameter2D="\"Object\" "
 MaterialExpressionTextureSampleParameter="\"Object\" "
 MaterialExpressionTextureCoordinate="\"Object\" "
@@ -1736,6 +1755,7 @@ AnimGraphNode_TransitionResult.Functions=True
 AnimGraphNode_TransitionResult.Tag=True
 AnimGraphNode_Base.Functions=True
 AnimGraphNode_Base.Tag=True
+Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1780,31 +1800,30 @@ WmfMediaSettings=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Characters/Barb/BS_DirectionalRun.BS_DirectionalRun
-OpenAssetsAtExit=/Game/Characters/Barb/Char_Barb_Skeleton.Char_Barb_Skeleton
 OpenAssetsAtExit=/Game/Characters/Barb/ABP_Barb.ABP_Barb
+OpenAssetsAtExit=/Game/Characters/Barb/BS_WalktoRun.BS_WalktoRun
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Barb/ABP_Barb
-MRUItem1=/Game/Characters/Barb/BS_DirectionalRun
-MRUItem2=/Game/Characters/Barb/BS_WalktoRun
-MRUItem3=/Game/Characters/Barb/Barb_Run_Right
-MRUItem4=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Backwards_run
-MRUItem5=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Run
-MRUItem6=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Strafe_run_Left
-MRUItem7=/Game/Characters/Barb/Char_Barb_Skeleton
-MRUItem8=/Game/BP_TDPlayerController
-MRUItem9=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem10=/Game/BPI_Character
-MRUItem11=/Game/BP_TDCharacter
-MRUItem12=/Game/Characters/Barb/Char_Barb
-MRUItem13=/Game/Characters/Barb/Char_Barb_Skeleton_Idle_Attack_Sword1
-MRUItem14=/Game/Characters/Barb/Char_Barb_Skeleton_Idle_Attack_Sword3
-MRUItem15=/Game/Characters/Barb/Barb_Weapons/Broadsword
-MRUItem16=/Game/Characters/Barb/Barb_Weapons/Textures/Weapon_Master
-MRUItem17=/Game/Characters/Barb/Barb_Weapons/MI_Barb_Weapons
-MRUItem18=/Game/Characters/Barb/Barb_Weapons/Textures/Broadsword_Material_008_OcclusionRoughnessMetallic
-MRUItem19=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem0=/Game/Characters/Barb/BS_WalktoRun
+MRUItem1=/Game/Characters/Barb/ABP_Barb
+MRUItem2=/Game/Characters/Barb/BS_DirectionalRun
+MRUItem3=/Game/Characters/Barb/BS_DirectionalIdle
+MRUItem4=/Game/Characters/Barb/Battle_Idle
+MRUItem5=/Game/Characters/Enemies/Wolf/Wolf_Rigged
+MRUItem6=/Game/Materials/Master_Basic
+MRUItem7=/Game/Materials/MI_Wolf
+MRUItem8=/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/Wolf_DefaultMaterial_BaseColor
+MRUItem9=/Game/Characters/Barb/Barb_Textures_Materials/MI_Barb_Acc
+MRUItem10=/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/MI_Wolf
+MRUItem11=/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/Wolf_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem12=/Game/Characters/Enemies/Wolf/Textures/Wolf_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem13=/Game/Characters/Barb/Barb_Run_Right
+MRUItem14=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Backwards_run
+MRUItem15=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Run
+MRUItem16=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Strafe_run_Left
+MRUItem17=/Game/Characters/Barb/Char_Barb_Skeleton
+MRUItem18=/Game/BP_TDPlayerController
+MRUItem19=/Game/TopDown/Blueprints/BP_TopDownCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter=1
@@ -1843,6 +1862,14 @@ MRUItem19=/Game/Characters/Mannequins/Animations/ABP_Manny
 /Game/Characters/Barb/BS_DirectionalRun.BS_DirectionalRun=1
 /Game/BP_TDPlayerController.BP_TDPlayerController=1
 /Game/Characters/Barb/new_anim_import_temp/Char_Barb_Anim_Skeleton_Run.Char_Barb_Anim_Skeleton_Run=1
+/Game/Characters/Enemies/Wolf/Textures/Wolf_DefaultMaterial_OcclusionRoughnessMetallic.Wolf_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/Wolf_DefaultMaterial_OcclusionRoughnessMetallic.Wolf_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/MI_Wolf.MI_Wolf=1
+/Game/Characters/Barb/Barb_Textures_Materials/MI_Barb_Acc.MI_Barb_Acc=1
+/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/Wolf_DefaultMaterial_BaseColor.Wolf_DefaultMaterial_BaseColor=1
+/Game/Characters/Barb/BS_DirectionalIdle.BS_DirectionalIdle=1
+/Game/Characters/Enemies/Wolf/Wolf_Rigged.Wolf_Rigged=1
+/Game/Characters/Barb/BS_WalktoRun.BS_WalktoRun=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1900,11 +1927,17 @@ SkeletalBodySetup.Physics=False
 FbxImportUI.Animation=True
 K2Node_VariableSet.Variable=False
 InputSettings.Bindings=False
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.Mobile=False
+PreviewMaterial.Usage=True
+MaterialEditorInstanceConstant.General=True
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=EditorErrors
 
 [PlacementMode]
+RecentlyPlaced=/Game/Characters/Enemies/Wolf/Wolf_Rigged.Wolf_Rigged;
 RecentlyPlaced=/Game/Characters/Barb/Char_Barb.Char_Barb;
 RecentlyPlaced=/Game/Characters/Barb/BP_Barb_Test.BP_Barb_Test;
 RecentlyPlaced=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter;
@@ -3133,6 +3166,7 @@ RecentsFiles=D:/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Py
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bRealtimeMaterialViewport=False
 
 [MaterialEditor]
 PrimType=1
@@ -3353,7 +3387,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
