--- a/CultOfTheBloodMoon/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CultOfTheBloodMoon/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -261,7 +261,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Up,InputSettings.Bind
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Up,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Down,InputSettings.Bindings.ActionMappings.Left,InputSettings.Bindings.ActionMappings.Right,InputSettings.Bindings.ActionMappings.Jump,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.AxisMappings.Mouse xy,InputSettings.Bindings.AxisMappings,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.File Path,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 ConcertClientConfig=InputSettings.Bindings.ActionMappings.Up,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Down,InputSettings.Bindings.ActionMappings.Left,InputSettings.Bindings.ActionMappings.Right,InputSettings.Bindings.ActionMappings.Jump,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.AxisMappings.Mouse xy,InputSettings.Bindings.AxisMappings,
 ConcertSyncConfig=InputSettings.Bindings.ActionMappings.Up,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Down,InputSettings.Bindings.ActionMappings.Left,InputSettings.Bindings.ActionMappings.Right,InputSettings.Bindings.ActionMappings.Jump,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.AxisMappings.Mouse xy,InputSettings.Bindings.AxisMappings,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,
@@ -278,7 +278,7 @@ BP_TopDownCharacter_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMe
 CapsuleComponent=
 PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens
 BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens
-K2Node_VariableSet=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Barb_Test_C.TransformCommon.Transform,
+K2Node_VariableSet=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Barb_Test_C.TransformCommon.Transform,BP_TopDownCharacter_C.Physics.ConstraintsGroup,BP_TopDownCharacter_C.TransformCommon.Transform,BP_TopDownCharacter_C.Materials.MaterialList,
 ABP_Barb_C=
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis,
 K2Node_VariableGet=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Barb_Test_C.TransformCommon.Transform,
@@ -295,6 +295,8 @@ StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Le
 PlayerController=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Barb_Test_C.TransformCommon.Transform,
 Blueprint=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Barb_Test_C.TransformCommon.Transform,BP_TopDownCharacter_C.Physics.ConstraintsGroup,BP_TopDownCharacter_C.TransformCommon.Transform,BP_TopDownCharacter_C.Materials.MaterialList,
 BP_TDPlayerController_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Barb_Test_C.TransformCommon.Transform,
+WB_HealthBar_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Barb_Test_C.TransformCommon.Transform,
+EdGraph=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Barb_Test_C.TransformCommon.Transform,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Barb
@@ -329,7 +331,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -503,7 +505,7 @@ DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 FbxExportOption="\"Object\" "
 FbxImportUI="\"Object\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 AssetViewerSettings="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
@@ -653,12 +655,23 @@ NavigationData="\"Object\" "
 K2Node_InputAxisEvent="\"Object\" "
 K2Node_Event="\"Object\" "
 K2Node_EditablePinBase="\"Object\" "
-BP_TopDownCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
+BP_TopDownCharacter_C=
+Character=
+Pawn=
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 AnimGraphNode_TransitionResult="\"Object\" "
+CanvasPanel="\"Object\" "
+PanelWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+Overlay="\"Object\" "
+Image="\"Object\" \"Object.Appearance.Brush\" "
+ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.ImageSize\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
+WB_HealthBar_C="\"Object\" "
+UserWidget="\"Object\" "
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1446,6 +1459,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -1755,7 +1769,80 @@ AnimGraphNode_TransitionResult.Functions=True
 AnimGraphNode_TransitionResult.Tag=True
 AnimGraphNode_Base.Functions=True
 AnimGraphNode_Base.Tag=True
-Texture2D.Interchange =True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Overlay.Layout=True
+Overlay.Behavior=False
+Overlay.Accessibility=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Clipping=True
+Overlay.Navigation=True
+Overlay.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=False
+ProgressBar.Appearance=False
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=False
+TextBlock.Performance=False
+TextBlock.Clipping=False
+TextBlock.Wrapping=False
+TextBlock.Behavior=False
+TextBlock.Render Transform=False
+TextBlock.Navigation=False
+TextBlock.Localization=False
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+WB_HealthBar_C.Appearance=True
+WB_HealthBar_C.Designer=True
+WB_HealthBar_C.Input=True
+WB_HealthBar_C.Interaction=True
+WB_HealthBar_C.Performance=True
+WB_HealthBar_C.Layout=True
+WB_HealthBar_C.Behavior=True
+WB_HealthBar_C.Render Transform=True
+WB_HealthBar_C.Localization=True
+WB_HealthBar_C.Accessibility=True
+WB_HealthBar_C.Clipping=True
+WB_HealthBar_C.Navigation=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+BP_TopDownController_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1799,31 +1886,32 @@ TakeRecorderProjectSettings=True
 WmfMediaSettings=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Characters/Barb/ABP_Barb.ABP_Barb
-OpenAssetsAtExit=/Game/Characters/Barb/BS_WalktoRun.BS_WalktoRun
+CleanShutdown=False
+OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController
+OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
+OpenAssetsAtExit=/Game/UI/WB_HealthBar.WB_HealthBar
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Barb/BS_WalktoRun
-MRUItem1=/Game/Characters/Barb/ABP_Barb
-MRUItem2=/Game/Characters/Barb/BS_DirectionalRun
-MRUItem3=/Game/Characters/Barb/BS_DirectionalIdle
-MRUItem4=/Game/Characters/Barb/Battle_Idle
-MRUItem5=/Game/Characters/Enemies/Wolf/Wolf_Rigged
-MRUItem6=/Game/Materials/Master_Basic
-MRUItem7=/Game/Materials/MI_Wolf
-MRUItem8=/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/Wolf_DefaultMaterial_BaseColor
-MRUItem9=/Game/Characters/Barb/Barb_Textures_Materials/MI_Barb_Acc
-MRUItem10=/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/MI_Wolf
-MRUItem11=/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/Wolf_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem12=/Game/Characters/Enemies/Wolf/Textures/Wolf_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem13=/Game/Characters/Barb/Barb_Run_Right
-MRUItem14=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Backwards_run
-MRUItem15=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Run
-MRUItem16=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Strafe_run_Left
-MRUItem17=/Game/Characters/Barb/Char_Barb_Skeleton
-MRUItem18=/Game/BP_TDPlayerController
-MRUItem19=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem0=/Game/UI/WB_HealthBar
+MRUItem1=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem2=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem3=/Game/Characters/Barb/ABP_Barb
+MRUItem4=/Game/Characters/Barb/Char_Barb_Physics
+MRUItem5=/Game/Characters/Barb/Barb_Weapons/Broadsword
+MRUItem6=/Game/Characters/Barb/BS_WalktoRun
+MRUItem7=/Game/Characters/Barb/BS_DirectionalRun
+MRUItem8=/Game/Characters/Barb/BS_DirectionalIdle
+MRUItem9=/Game/Characters/Barb/Battle_Idle
+MRUItem10=/Game/Characters/Enemies/Wolf/Wolf_Rigged
+MRUItem11=/Game/Materials/Master_Basic
+MRUItem12=/Game/Materials/MI_Wolf
+MRUItem13=/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/Wolf_DefaultMaterial_BaseColor
+MRUItem14=/Game/Characters/Barb/Barb_Textures_Materials/MI_Barb_Acc
+MRUItem15=/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/MI_Wolf
+MRUItem16=/Game/Characters/Enemies/Wolf/Wolf_Textures_Materials/Wolf_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem17=/Game/Characters/Enemies/Wolf/Textures/Wolf_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem18=/Game/Characters/Barb/Barb_Run_Right
+MRUItem19=/Game/Characters/Barb/Char_Barb_Anim_Skeleton_Backwards_run
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter=1
@@ -1870,6 +1958,7 @@ MRUItem19=/Game/TopDown/Blueprints/BP_TopDownCharacter
 /Game/Characters/Barb/BS_DirectionalIdle.BS_DirectionalIdle=1
 /Game/Characters/Enemies/Wolf/Wolf_Rigged.Wolf_Rigged=1
 /Game/Characters/Barb/BS_WalktoRun.BS_WalktoRun=1
+/Game/UI/WB_HealthBar.WB_HealthBar=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1934,11 +2023,13 @@ PreviewMaterial.Usage=True
 MaterialEditorInstanceConstant.General=True
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=BlueprintLog
 
 [PlacementMode]
-RecentlyPlaced=/Game/Characters/Enemies/Wolf/Wolf_Rigged.Wolf_Rigged;
+RecentlyPlaced=/Game/Characters/Barb/Char_Barb_Physics.Char_Barb_Physics;
+RecentlyPlaced=/Game/Characters/Barb/Char_Barb_Anim_Walk.Char_Barb_Anim_Walk;
 RecentlyPlaced=/Game/Characters/Barb/Char_Barb.Char_Barb;
+RecentlyPlaced=/Game/Characters/Enemies/Wolf/Wolf_Rigged.Wolf_Rigged;
 RecentlyPlaced=/Game/Characters/Barb/BP_Barb_Test.BP_Barb_Test;
 RecentlyPlaced=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter;
 RecentlyPlaced=/Game/Materials/MI_Tiling_Grass.MI_Tiling_Grass;
@@ -3397,4 +3488,88 @@ bHideUnrelatedNodes=False
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 DeleteConfirmationVariable_Warning=False
+
+[WidgetTemplatesExpanded]
+Common=False
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
 
