--- a/CultOfTheBloodMoon/Saved/Config/WindowsEditor/Engine.ini
+++ b/CultOfTheBloodMoon/Saved/Config/WindowsEditor/Engine.ini
@@ -88,4 +88,14 @@ LocalSettings=(bRecordOnClient=True,bTransactSources=True)
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 JavaPath=(Path="")
+SDKPath=(Path="")
+NDKPath=(Path="")
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
